Add API documentation
