# handlers/books.go
@@ -8,12 +8,25 @@ import (
 	"github.com/santosh/gingo/models"
 )
 
-// GetBooks responds with the list of all books as JSON.
+// GetBooks		 godoc
+// @Summary      Get books array
+// @Description  Responds with the list of all books as JSON.
+// @Tags         books
+// @Produce      json
+// @Success      200  {array}  models.Book
+// @Router       /books [get]
 func GetBooks(c *gin.Context) {
 	c.JSON(http.StatusOK, db.Books)
 }
 
-// PostBook takes a book JSON and store in DB.
+// PostBook		 godoc
+// @Summary      Store a new book
+// @Description  Takes a book JSON and store in DB. Return saved JSON.
+// @Tags         books
+// @Produce      json
+// @Param        book  body      models.Book  true  "Book JSON"
+// @Success      200   {object}  models.Book
+// @Router       /books [post]
 func PostBook(c *gin.Context) {
 	var newBook models.Book
 
@@ -28,7 +41,14 @@ func PostBook(c *gin.Context) {
 	c.JSON(http.StatusCreated, newBook)
 }
 
-// GetBookByISBN locates the book whose ISBN value matches the isbn
+// GetBookByISBN		 godoc
+// @Summary      Get single book by isbn
+// @Description  Returns the book whose ISBN value matches the isbn.
+// @Tags         books
+// @Produce      json
+// @Param        isbn  path      string  true  "search book by isbn"
+// @Success      200  {object}  models.Book
+// @Router       /books/{isbn} [get]
 func GetBookByISBN(c *gin.Context) {
 	isbn := c.Param("isbn")
 
@@ -46,4 +66,3 @@ func GetBookByISBN(c *gin.Context) {
 // func DeleteBookByISBN(c *gin.Context) {}
 
 // func UpdateBookByISBN(c *gin.Context) {}
-
