# routes/routes.go
@@ -7,11 +7,16 @@ import (
 
 func SetupRouter() *gin.Engine {
 	router := gin.Default()
-	router.GET("/books", handlers.GetBooks)
-	router.GET("/books/:isbn", handlers.GetBookByISBN)
-	// router.DELETE("/books/:isbn", handlers.DeleteBookByISBN)
-	// router.PUT("/books/:isbn", handlers.UpdateBookByISBN)
-	router.POST("/books", handlers.PostBook)
+
+	v1 := router.Group("/api/v1")
+	{
+		v1.GET("/books", handlers.GetBooks)
+		v1.GET("/books/:isbn", handlers.GetBookByISBN)
+		// router.DELETE("/books/:isbn", handlers.DeleteBookByISBN)
+		// router.PUT("/books/:isbn", handlers.UpdateBookByISBN)
+		v1.POST("/books", handlers.PostBook)
+	}
+
 
 	return router
 }
